_performance-golf/pg-ai/_codex/codex/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_curated_marketplace.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 7289
expression: popup
---
  Plugins
  Browse plugins from available marketplaces.
  Installed 1 of 4 available plugins.
  Using cached marketplace data: remote sync timed out

  Type to search plugins
<<<<<<< HEAD
› Bravo Search · ChatGPT Marketplace     Can be installed. Press Enter to view plugin details.
  Alpha Sync · ChatGPT Marketplace       Installed · Disabled · ChatGPT Marketplace · Already
                                         installed but disabled.
  Starter · ChatGPT Marketplace          Available by default · ChatGPT Marketplace · Included by
                                         default.
  Hidden Repo Plugin · Repo Marketplace  Can be installed · Repo Marketplace · Should not be shown
                                         in /plugins.
=======
› Alpha Sync          Installed · Disabled   Press Enter to view plugin details.
  Bravo Search        Available            · ChatGPT Marketplace · Search docs and tickets.
  Hidden Repo Plugin  Available            · Repo Marketplace · Should not be shown in /plugins.
  Starter             Available by default · ChatGPT Marketplace · Included by default.
>>>>>>> origin/main

  Press esc to close.
