_performance-golf/pg-ai/_codex/codex/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_search_filtered.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 7527
expression: popup
---
  Plugins
  Browse plugins from available marketplaces.
  Installed 0 of 3 available plugins.

  sla
<<<<<<< HEAD
› Slack · ChatGPT Marketplace  Can be installed. Press Enter to view plugin details.
=======
› Slack  Available   Press Enter to view plugin details.
>>>>>>> origin/main

  Press esc to close.
